chore: 환경설정 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src", "index.d.ts"]
 }
