--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "a11y-airline",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kwannee.github.io/a11y-airline/",
   "dependencies": {
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
@@ -9,11 +10,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
   }
 }
