--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://thgml05.github.io/a11y-airline",
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
